# api/article/auth_http_server.pb.go
@@ -1,6 +1,6 @@
 // Code generated by protoc-gen-go-gin. DO NOT EDIT.
 // versions:
-// - protoc-gen-go-gin v1.0.1
+// - protoc-gen-go-gin v1.0.2
 // - protoc            v4.24.2
 // source: api/auth.proto
 
@@ -34,6 +34,7 @@ type AuthServiceHTTPServer interface {
 	Pull(*api.Context, *PushReq) (*RealResp, error)
 	// 测试特殊的返回
 	GetOneArticlePure(*api.Context, *GetOneArticlePureReq) *GetOneArticlePureResp
+	PostOneArticlePure(*api.Context, *GetOneArticlePureReq) *GetOneArticlePureResp
 }
 
 func RegisterAuthServiceHTTPServer(s *gin.Engine, srv AuthServiceHTTPServer) {
@@ -43,6 +44,7 @@ func RegisterAuthServiceHTTPServer(s *gin.Engine, srv AuthServiceHTTPServer) {
 	r.POST("/private/push", _AuthService_Push_HTTP_Handler(srv))     // Push发送1 ||商米助手
 	r.POST("/private/pull", _AuthService_Pull_HTTP_Handler(srv))
 	r.GET("/v1/get/article", _AuthService_GetOneArticlePure_HTTP_Handler(srv)) // 测试特殊的返回
+	r.POST("/v1/get/article", _AuthService_PostOneArticlePure_HTTP_Handler(srv))
 }
 
 func _AuthService_Push_HTTP_Handler(srv AuthServiceHTTPServer) func(g *gin.Context) {
@@ -82,6 +84,15 @@ func _AuthService_GetOneArticlePure_HTTP_Handler(srv AuthServiceHTTPServer) func
 		req := &GetOneArticlePureReq{}
 		ctx := api.NewContext(g)
 		resp := srv.GetOneArticlePure(&ctx, req)
+		setRetOrigin(&ctx, resp)
+	}
+}
+
+func _AuthService_PostOneArticlePure_HTTP_Handler(srv AuthServiceHTTPServer) func(g *gin.Context) {
+	return func(g *gin.Context) {
+		req := &GetOneArticlePureReq{}
+		ctx := api.NewContext(g)
+		resp := srv.PostOneArticlePure(&ctx, req)
 		setRetOrigin(&ctx, resp)
 	}
 }
